version/0.14/_sources/api/solver/_autosummary/settings/premix_unburnt_density.rst.txt
:orphan:

.. _premix_unburnt_density:

premix_unburnt_density
======================

.. autoclass:: ansys.fluent.core.solver.settings_231.premix_unburnt_density.premix_unburnt_density

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

